--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -163,3 +163,16 @@ body {
   }
 }
 
+/* Animaciones */
+.reveal {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.8s ease;
+}
+
+.reveal.active {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
